--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
-
 .formContainer{
   width:50%;
   margin: auto;
 }
 
+ol {
+  counter-reset: item;
+}
+li {
+  display: block;
+}
+li:before {
+  content: counters(item, ".")". ";
+  counter-increment: item;
+}
